--- a/yt-hide-shorts.css
+++ b/yt-hide-shorts.css
@@ -1,3 +1,3 @@
-ytd-grid-video-renderer:has([overlay-style="SHORTS"]) {
+ytd-rich-item-renderer:has([overlay-style="SHORTS"]) {
     display: none !important;
 }
